# protoconf-vizceral

./: .gitignore  Dockerfile  README.md  buf.gen.yaml  go.mod  go.sum  main.go  package.json  webpack.config.js
.github/workflows/: release.yaml
app/: BUILD.bazel  app.jsx  index.html
app/components/: BUILD.bazel  trafficFlow.jsx
materialized_config/services/registry/: AdService.materialized_JSON  Frontend.materialized_JSON
materialized_config/vizceral/: default.materialized_JSON  spinnaker.materialized_JSON
mutable_config/regions/: count.materialized_JSON
pkg/pb/: protoconf_service.pb.go  vizceral.pb.go
scripts/: post.sh
src/services/: adservice.pinc  cartservice.pinc  checkoutservice.pinc  consts.pinc  currencyservice.pinc  emailservice.pinc  frontend.pinc  paymentservice.pinc  productcatalogservice.pinc  recommendationservice.pinc  registry.mpconf  registry.pinc  services.proto  services.proto-validator  shippingservice.pinc
src/vizceral/: BUILD.bazel  default.pconf  spinnaker.pconf  vizceral.proto
