load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "server_proto",
    srcs = ["vizceral.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "server_go_proto",
    importpath = "github.com/wix/viz-server",
    proto = ":server_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "viz-server",
    embed = [":server_go_proto"],
    importpath = "github.com/wix/viz-server",
    visibility = ["//visibility:public"],
)
